stylized & added gradient

--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Wizytówka</title>
-    <link href="normalize.css" rel="stylesheet" type="text/css"/>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
-</head>
-<body>
+    <link href="normalize.css" rel="stylesheet" type="text/css" />
+    <link href="style.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
     <main class="main">
-        <img src="mojezdj.jpg" alt="Zdjęcie Michał Moń"/>
-        <div>
-            <article class="description">
-                <header class="description__heading">
-                    <h2>Michał Moń</h2>
-                </header>
-                <h3>Junior Frontend Developer</h3>
-                <p>Lorem ipsum bladkoasd</p>
-                <p>smdasl
-                </p>
-            </article>
-        </div>
+      <img src="mojezdj.jpg" alt="Zdjęcie Michał Moń" />
+      <div>
+        <article class="description">
+          <header class="description__heading">
+            <h2>Michał Moń</h2>
+          </header>
+          <h3>Junior Frontend Developer</h3>
+          <p>
+            Młody adept sztuki frontendu oraz student 2. semestru Politechniki
+            Lubelskiej. Chciałby tworzyć stylowe i funkcjonalne strony i
+            aplikacje internetowe z wykorzystaniem najnowszych technologii oraz
+            narzędzi.
+          </p>
+          <p>smdasl</p>
+        </article>
+      </div>
     </main>
-</body>
-
+  </body>
 </html>
