social added and stylized

--- a/index.html
+++ b/index.html
@@ -17,12 +17,17 @@
           </header>
           <h3>Junior Frontend Developer</h3>
           <p>
-            Młody adept sztuki frontendu oraz student 2. semestru Politechniki
-            Lubelskiej. Chciałby tworzyć stylowe i funkcjonalne strony i
+            Młody adept <em>sztuki frontendu</em> oraz student 2. semestru Politechniki
+            Lubelskiej. Chciałby tworzyć <em>stylowe i funkcjonalne strony</em>, a także
             aplikacje internetowe z wykorzystaniem najnowszych technologii oraz
             narzędzi.
           </p>
-          <p>smdasl</p>
+          <article class="social">
+              <h4>Social:</h4>
+              <a href="https://www.facebook.com/profile.php?id=100004056637935" target="_blank"><img class="social__logo" src="fb-logo.png" alt="Facebook"/></a>
+              <a href="https://github.com/michal-mon" target="_blank"><img class="social__logo" src="github-logo.png" alt="Github"/></a>
+              <a href="https://www.linkedin.com/in/micha%C5%82-mo%C5%84-66798a15b/" target="_blank"><img class="social__logo"src="linkedin-logo.png" alt="LinkedIn"/></a>
+          </article>
         </article>
       </div>
     </main>
