BEM fixed, formatted & cleaned code

--- a/index.html
+++ b/index.html
@@ -9,24 +9,41 @@
   </head>
   <body>
     <main class="main">
-      <img src="mojezdj.jpg" alt="Zdjęcie Michał Moń" />
+      <img src="mojezdj.jpg" class="main__photo" alt="Zdjęcie Michał Moń" />
       <div>
         <article class="description">
           <header class="description__heading">
-            <h2>Michał Moń</h2>
+            <h2 class="description__heading">Michał Moń</h2>
+            <h3 class="description__heading--special">
+              Junior Frontend Developer
+            </h3>
           </header>
-          <h3>Junior Frontend Developer</h3>
-          <p>
-            Młody adept <em>sztuki frontendu</em> oraz student 2. semestru Politechniki
-            Lubelskiej. Chciałby tworzyć <em>stylowe i funkcjonalne strony</em>, a także
-            aplikacje internetowe z wykorzystaniem najnowszych technologii oraz
-            narzędzi.
+          <p class="description__text">
+            Młody adept
+            <em class="description__text description__text--special"
+              >sztuki frontendu</em
+            >
+            oraz student 2. semestru Politechniki Lubelskiej. Chciałby tworzyć
+            <em class="description__text description__text--special"
+              >stylowe i funkcjonalne strony</em
+            >, a także aplikacje internetowe z wykorzystaniem najnowszych
+            technologii oraz narzędzi.
           </p>
           <article class="social">
-              <h4>Social:</h4>
-              <a href="https://www.facebook.com/profile.php?id=100004056637935" target="_blank"><img class="social__logo" src="fb-logo.png" alt="Facebook"/></a>
-              <a href="https://github.com/michal-mon" target="_blank"><img class="social__logo" src="github-logo.png" alt="Github"/></a>
-              <a href="https://www.linkedin.com/in/micha%C5%82-mo%C5%84-66798a15b/" target="_blank"><img class="social__logo"src="linkedin-logo.png" alt="LinkedIn"/></a>
+            <h4>Social:</h4>
+            <a
+              href="https://www.facebook.com/profile.php?id=100004056637935"
+              target="_blank"
+              ><img class="social__logo" src="fb-logo.png" alt="Facebook"
+            /></a>
+            <a href="https://github.com/michal-mon" target="_blank"
+              ><img class="social__logo" src="github-logo.png" alt="Github"
+            /></a>
+            <a
+              href="https://www.linkedin.com/in/micha%C5%82-mo%C5%84-66798a15b/"
+              target="_blank"
+              ><img class="social__logo" src="linkedin-logo.png" alt="LinkedIn"
+            /></a>
           </article>
         </article>
       </div>
