slight changes in flexbox and changed photo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main class="main">
-      <img src="mojezdj.jpg" class="main__photo" alt="Zdjęcie Michał Moń" />
+      <img src="myphoto.jpg" class="main__photo" alt="Zdjęcie Michał Moń" />
       <div>
         <article class="description">
           <header class="description__heading">
