fixed bem & semantic issues

--- a/index.html
+++ b/index.html
@@ -13,24 +13,24 @@
       <div>
         <article class="description">
           <header class="description__heading">
-            <h2 class="description__heading">Michał Moń</h2>
-            <h3 class="description__heading--special">
+            <h1 class="description__title">Michał Moń</h1>
+            <p class="description__position">
               Junior Frontend Developer
-            </h3>
+            </p>
           </header>
           <p class="description__text">
             Młody adept
-            <em class="description__text description__text--special"
+            <em class="description__special"
               >sztuki frontendu</em
             >
             oraz student 2. semestru Politechniki Lubelskiej. Chciałby tworzyć
-            <em class="description__text description__text--special"
+            <em class="description__special"
               >stylowe i funkcjonalne strony</em
             >, a także aplikacje internetowe z wykorzystaniem najnowszych
             technologii oraz narzędzi.
           </p>
-          <article class="social">
-            <h4>Social:</h4>
+          <section class="social">
+            <h2 class="social__heading">Social:</h2>
             <a
               href="https://www.facebook.com/profile.php?id=100004056637935"
               target="_blank"
@@ -44,7 +44,7 @@
               target="_blank"
               ><img class="social__logo" src="linkedin-logo.png" alt="LinkedIn"
             /></a>
-          </article>
+          </section>
         </article>
       </div>
     </main>
